--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,7 @@
-//spring.data.mybatis
-spring.data.mybatis.typeAliasesPackage=org.spring.boot.mybatis.rw.sample.mapper
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=INTERNET_DATABASE;Encrypt=True;TrustServerCertificate=True;sendTimeAsDateTime=false
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.username=sa
+spring.datasource.password=12345
 
-//data
-spring.mybatis.rw.readDataSources[0].url=jdbc:MySql://localhost:3306/test?characterEncoding=UTF-8&useSSL=false
-spring.mybatis.rw.readDataSources[0].driverClassName=com.mysql.jdbc.Driver
-spring.mybatis.rw.readDataSources[0].username=root
-spring.mybatis.rw.readDataSources[0].password=123456
-
-spring.mybatis.rw.writeDataSource.url=jdbc:MySql://localhost:3306/chenlei?characterEncoding=UTF-8&useSSL=false
-spring.mybatis.rw.writeDataSource.driverClassName=com.mysql.jdbc.Driver
-spring.mybatis.rw.writeDataSource.username=root
-spring.mybatis.rw.writeDataSource.password=123456
-spring.mybatis.rw.writeDataSource.max-idle=10
-spring.mybatis.rw.writeDataSource.max-wait=10000
-spring.mybatis.rw.writeDataSource.min-idle=5
-spring.mybatis.rw.writeDataSource.initial-size=5
-spring.mybatis.rw.writeDataSource.validation-query=SELECT 1
-spring.mybatis.rw.writeDataSource.test-on-borrow=false
-spring.mybatis.rw.writeDataSource.test-while-idle=true
-spring.mybatis.rw.writeDataSource.time-between-eviction-runs-millis=18800
-
-
-server.servletPath=/user
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=update
